macros/tests/proto/fail/invalid_guid.stderr
error: Invalid GUID: ParseUuidError
  --> tests/proto/fail/invalid_guid.rs:12:1
   |
12 | #[Protocol("c986ec27-69420-af54-4b55-80aa-91697fcdf8eb")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `Protocol` (in Nightly builds, run with -Z macro-backtrace for more info)
